Add Ars Magica 2, because I can :)

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -448,6 +448,186 @@ shedding {
     I:Zombie.metadata=0
     I:Zombie.rate=-1
 
+    # Configuration of Shedding for arsmagica2.AirGuardian
+    S:arsmagica2.AirGuardian.item=
+    I:arsmagica2.AirGuardian.lexiconDisplaySize=40
+    I:arsmagica2.AirGuardian.metadata=0
+    I:arsmagica2.AirGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.AirSled
+    S:arsmagica2.AirSled.item=
+    I:arsmagica2.AirSled.lexiconDisplaySize=40
+    I:arsmagica2.AirSled.metadata=0
+    I:arsmagica2.AirSled.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ArcaneGuardian
+    S:arsmagica2.ArcaneGuardian.item=
+    I:arsmagica2.ArcaneGuardian.lexiconDisplaySize=40
+    I:arsmagica2.ArcaneGuardian.metadata=0
+    I:arsmagica2.ArcaneGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Broom
+    S:arsmagica2.Broom.item=
+    I:arsmagica2.Broom.lexiconDisplaySize=40
+    I:arsmagica2.Broom.metadata=0
+    I:arsmagica2.Broom.rate=-1
+
+    # Configuration of Shedding for arsmagica2.DarkMage
+    S:arsmagica2.DarkMage.item=
+    I:arsmagica2.DarkMage.lexiconDisplaySize=40
+    I:arsmagica2.DarkMage.metadata=0
+    I:arsmagica2.DarkMage.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Darkling
+    S:arsmagica2.Darkling.item=
+    I:arsmagica2.Darkling.lexiconDisplaySize=40
+    I:arsmagica2.Darkling.metadata=0
+    I:arsmagica2.Darkling.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Dryad
+    S:arsmagica2.Dryad.item=
+    I:arsmagica2.Dryad.lexiconDisplaySize=40
+    I:arsmagica2.Dryad.metadata=0
+    I:arsmagica2.Dryad.rate=-1
+
+    # Configuration of Shedding for arsmagica2.EarthElemental
+    S:arsmagica2.EarthElemental.item=
+    I:arsmagica2.EarthElemental.lexiconDisplaySize=40
+    I:arsmagica2.EarthElemental.metadata=0
+    I:arsmagica2.EarthElemental.rate=-1
+
+    # Configuration of Shedding for arsmagica2.EarthGuardian
+    S:arsmagica2.EarthGuardian.item=
+    I:arsmagica2.EarthGuardian.lexiconDisplaySize=40
+    I:arsmagica2.EarthGuardian.metadata=0
+    I:arsmagica2.EarthGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.EnderGuardian
+    S:arsmagica2.EnderGuardian.item=
+    I:arsmagica2.EnderGuardian.lexiconDisplaySize=40
+    I:arsmagica2.EnderGuardian.metadata=0
+    I:arsmagica2.EnderGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.FireElemental
+    S:arsmagica2.FireElemental.item=
+    I:arsmagica2.FireElemental.lexiconDisplaySize=40
+    I:arsmagica2.FireElemental.metadata=0
+    I:arsmagica2.FireElemental.rate=-1
+
+    # Configuration of Shedding for arsmagica2.FireGuardian
+    S:arsmagica2.FireGuardian.item=
+    I:arsmagica2.FireGuardian.lexiconDisplaySize=40
+    I:arsmagica2.FireGuardian.metadata=0
+    I:arsmagica2.FireGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Flicker
+    S:arsmagica2.Flicker.item=
+    I:arsmagica2.Flicker.lexiconDisplaySize=40
+    I:arsmagica2.Flicker.metadata=0
+    I:arsmagica2.Flicker.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Hecate
+    S:arsmagica2.Hecate.item=
+    I:arsmagica2.Hecate.lexiconDisplaySize=40
+    I:arsmagica2.Hecate.metadata=0
+    I:arsmagica2.Hecate.rate=-1
+
+    # Configuration of Shedding for arsmagica2.HellCow
+    S:arsmagica2.HellCow.item=
+    I:arsmagica2.HellCow.lexiconDisplaySize=40
+    I:arsmagica2.HellCow.metadata=0
+    I:arsmagica2.HellCow.rate=-1
+
+    # Configuration of Shedding for arsmagica2.LifeGuardian
+    S:arsmagica2.LifeGuardian.item=
+    I:arsmagica2.LifeGuardian.lexiconDisplaySize=40
+    I:arsmagica2.LifeGuardian.metadata=0
+    I:arsmagica2.LifeGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.LightMage
+    S:arsmagica2.LightMage.item=
+    I:arsmagica2.LightMage.lexiconDisplaySize=40
+    I:arsmagica2.LightMage.metadata=0
+    I:arsmagica2.LightMage.rate=-1
+
+    # Configuration of Shedding for arsmagica2.LightningGuardian
+    S:arsmagica2.LightningGuardian.item=
+    I:arsmagica2.LightningGuardian.lexiconDisplaySize=40
+    I:arsmagica2.LightningGuardian.metadata=0
+    I:arsmagica2.LightningGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ManaCreeper
+    S:arsmagica2.ManaCreeper.item=
+    I:arsmagica2.ManaCreeper.lexiconDisplaySize=40
+    I:arsmagica2.ManaCreeper.metadata=0
+    I:arsmagica2.ManaCreeper.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ManaElemental
+    S:arsmagica2.ManaElemental.item=
+    I:arsmagica2.ManaElemental.lexiconDisplaySize=40
+    I:arsmagica2.ManaElemental.metadata=0
+    I:arsmagica2.ManaElemental.rate=-1
+
+    # Configuration of Shedding for arsmagica2.NatureGuardian
+    S:arsmagica2.NatureGuardian.item=
+    I:arsmagica2.NatureGuardian.lexiconDisplaySize=40
+    I:arsmagica2.NatureGuardian.metadata=0
+    I:arsmagica2.NatureGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.RiftStorage
+    S:arsmagica2.RiftStorage.item=
+    I:arsmagica2.RiftStorage.lexiconDisplaySize=40
+    I:arsmagica2.RiftStorage.metadata=0
+    I:arsmagica2.RiftStorage.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ShadowHelper
+    S:arsmagica2.ShadowHelper.item=
+    I:arsmagica2.ShadowHelper.lexiconDisplaySize=40
+    I:arsmagica2.ShadowHelper.metadata=0
+    I:arsmagica2.ShadowHelper.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ThrownRock
+    S:arsmagica2.ThrownRock.item=
+    I:arsmagica2.ThrownRock.lexiconDisplaySize=40
+    I:arsmagica2.ThrownRock.metadata=0
+    I:arsmagica2.ThrownRock.rate=-1
+
+    # Configuration of Shedding for arsmagica2.ThrownSickle
+    S:arsmagica2.ThrownSickle.item=
+    I:arsmagica2.ThrownSickle.lexiconDisplaySize=40
+    I:arsmagica2.ThrownSickle.metadata=0
+    I:arsmagica2.ThrownSickle.rate=-1
+
+    # Configuration of Shedding for arsmagica2.WaterElemental
+    S:arsmagica2.WaterElemental.item=
+    I:arsmagica2.WaterElemental.lexiconDisplaySize=40
+    I:arsmagica2.WaterElemental.metadata=0
+    I:arsmagica2.WaterElemental.rate=-1
+
+    # Configuration of Shedding for arsmagica2.WaterGuardian
+    S:arsmagica2.WaterGuardian.item=
+    I:arsmagica2.WaterGuardian.lexiconDisplaySize=40
+    I:arsmagica2.WaterGuardian.metadata=0
+    I:arsmagica2.WaterGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.Whirlwind
+    S:arsmagica2.Whirlwind.item=
+    I:arsmagica2.Whirlwind.lexiconDisplaySize=40
+    I:arsmagica2.Whirlwind.metadata=0
+    I:arsmagica2.Whirlwind.rate=-1
+
+    # Configuration of Shedding for arsmagica2.WinterGuardian
+    S:arsmagica2.WinterGuardian.item=
+    I:arsmagica2.WinterGuardian.lexiconDisplaySize=40
+    I:arsmagica2.WinterGuardian.metadata=0
+    I:arsmagica2.WinterGuardian.rate=-1
+
+    # Configuration of Shedding for arsmagica2.WinterGuardianArm
+    S:arsmagica2.WinterGuardianArm.item=
+    I:arsmagica2.WinterGuardianArm.lexiconDisplaySize=40
+    I:arsmagica2.WinterGuardianArm.metadata=0
+    I:arsmagica2.WinterGuardianArm.rate=-1
+
     # Configuration of Shedding for draconicevolution.ChaosGuardian
     S:draconicevolution.ChaosGuardian.item=
     I:draconicevolution.ChaosGuardian.lexiconDisplaySize=40
@@ -507,14 +687,10 @@ shedding {
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
-
-    # Configuration of Shedding for natura.babyheatscarspider
     S:natura.babyheatscarspider.item=
     I:natura.babyheatscarspider.lexiconDisplaySize=40
     I:natura.babyheatscarspider.metadata=0
     I:natura.babyheatscarspider.rate=-1
-
-    # Configuration of Shedding for natura.heatscarspider
     S:natura.heatscarspider.item=
     I:natura.heatscarspider.lexiconDisplaySize=40
     I:natura.heatscarspider.metadata=0
