--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -19,6 +19,7 @@ general {
         mods {
             B:AdvancedRocketry=false
             B:AdvancedRocketryCore=false
+            B:AnimationAPI=false
             B:AppleCore=false
             B:Aroma1997Core=false
             B:Aroma1997CoreHelper=false
@@ -60,6 +61,7 @@ general {
             B:advancedRocketry=false
             B:advgenerators=false
             B:appleskin=false
+            B:arsmagica2=false
             B:basemetals=false
             B:bdlib=false
             B:bedbugs=false
