Add Surge by Darkhax

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -127,6 +127,7 @@ general {
             B:sgcraft=false
             B:simpleretrogen=false
             B:supercraftingframe=false
+            B:surge=false
             B:tconstruct=false
             B:theoneprobe=false
             B:tinkertoolleveling=false
