Forge Mod Loader 1.10.2-12.18.3.2297
Updated mods:
  Advanced Rocketry 1.10.2-1.0.19
  Chameleon 1.10.2-2.3.0
  LibVulpes 1.10.2-0.1.19
  Mystical Agriculture 1.5.3
  Natura 1.10.2-4.1.0.57
  Storage Drawers 1.10.2-3.7.6
  The One Probe 1.1x-1.4.7

--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -79,6 +79,7 @@ gear {
     I:aluminum_tier=2
     I:amber_tier=4
     I:apatite_tier=2
+    I:aquarium_tier=3
     I:ardite_tier=3
     I:basalt_tier=2
     I:basalz_tier=3
@@ -90,6 +91,7 @@ gear {
     I:certus_quartz_tier=3
     I:chimerite_tier=3
     I:cobalt_tier=4
+    I:cold_iron_tier=3
     I:conductive_iron_tier=3
     I:constantan_tier=4
     I:copper_tier=2
@@ -129,6 +131,7 @@ gear {
     I:signalum_tier=4
     I:silver_tier=3
     I:soularium_tier=4
+    I:star_steel_tier=4
     I:steels_tier=4
     I:sunstone_tier=5
     I:tanzanite_tier=4
@@ -153,6 +156,7 @@ gear {
     B:aluminum_seeds=true
     B:amber_seeds=true
     B:apatite_seeds=true
+    B:aquarium_seeds=true
     B:ardite_seeds=true
     B:basalt_seeds=true
     B:basalz_seeds=true
@@ -164,6 +168,7 @@ gear {
     B:certus_quartz_seeds=true
     B:chimerite_seeds=true
     B:cobalt_seeds=true
+    B:cold_iron_seeds=true
     B:conductive_iron_seeds=true
     B:constantan_seeds=true
     B:copper_seeds=true
@@ -203,6 +208,7 @@ gear {
     B:signalum_seeds=true
     B:silver_seeds=true
     B:soularium_seeds=true
+    B:star_steel_seeds=true
     B:steel_seeds=true
     B:sunstone_seeds=true
     B:tanzanite_seeds=true
@@ -237,6 +243,7 @@ gear {
     I:dirt_tier=1
     I:dye_tier=2
     I:emerald_tier=5
+    I:end_tier=4
     I:enderman_tier=4
     I:experience_tier=4
     I:fire_tier=2
@@ -282,6 +289,7 @@ seeds {
     B:dirt_seeds=true
     B:dye_seeds=true
     B:emerald_seeds=true
+    B:end_seeds=true
     B:enderman_seeds=true
     B:experience_seeds=true
     B:fire_seeds=true
@@ -340,7 +348,7 @@ settings {
     B:growth_accelerator=true
 
     # Amount of seconds between each growth tick attempt. [range: 1 ~ 3600, default: 10]
-    I:growth_accelerator_speed=15
+    I:growth_accelerator_speed=10
 
     # Percentage chance for a hostile mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
     I:hostile_drop_chance=20
@@ -349,7 +357,7 @@ settings {
     B:mystical_fertilizer=true
 
     # Percentage chance for a passive mob when killed to drop an Inferium Essence. [range: 0 ~ 100, default: 20]
-    I:passive_drop_chance=25
+    I:passive_drop_chance=20
 
     # Percentage chance of a second seed dropping. [range: 0 ~ 100, default: 10]
     I:seed_chance=10
@@ -462,11 +470,11 @@ world {
     # Minimum Y level Soulstone should spawn. [range: 1 ~ 127, default: 16]
     I:soulstone_miny=16
 
-    # Amount of Soulstone veins to spawn. Higher = more. [range: 0 ~ 100, default: 1]
-    I:soulstone_veincount=1
+    # Amount of Soulstone veins to spawn. Higher = more. [range: 0 ~ 100, default: 8]
+    I:soulstone_veincount=8
 
-    # Size of the Soulstone veins. [range: 0 ~ 100, default: 64]
-    I:soulstone_veinsize=64
+    # Size of the Soulstone veins. [range: 0 ~ 40, default: 40]
+    I:soulstone_veinsize=40
 }
 
 
