--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -16,6 +16,13 @@
 }
 
 
+"base metals" {
+    I:aquarium=4
+    I:cold_iron=4
+    I:star_steel=3
+}
+
+
 "biomes 'o plenty" {
     I:ender_amethyst=3
 }
@@ -23,7 +30,7 @@
 
 botania {
     I:manasteel=5
-    I:mystical_flower=8
+    I:mystical_flower=6
     I:terrasteel=2
 }
 
@@ -41,6 +48,7 @@ chisel {
     I:cactus=16
     I:carrot=12
     I:chiseled_stonebrick=12
+    I:chorus_fruit=12
     I:clay=24
     I:coarse_dirt=16
     I:cobblestone=32
@@ -49,7 +57,7 @@ chisel {
     I:diorite=16
     I:dirt=24
     I:dye=6
-    I:end_stone=16
+    I:end_stone=24
     I:flint=8
     I:granite=16
     I:grass=12
@@ -63,12 +71,14 @@ chisel {
     I:mushroom=8
     I:mycelium=16
     I:nether_brick=24
+    I:nether_wart=12
     I:netherrack=32
     I:packed_ice=12
     I:podzol=8
     I:poisonous_potato=1
     I:potato=12
     I:pumpkin=16
+    I:purpur_block=8
     I:sand=16
     I:sapling=4
     I:snow=12
@@ -120,11 +130,6 @@ gems {
 }
 
 
-"immersive engineering" {
-    I:constantan=4
-}
-
-
 mekanism {
     I:glowstone_ingot=3
     I:osmium=4
@@ -148,8 +153,8 @@ mekanism {
     B:milk_bucket=true
     I:mutton=4
     I:pork=4
-    I:prismarine_crystal=8
-    I:prismarine_shard=16
+    I:prismarine_crystal=16
+    I:prismarine_shard=12
     I:rabbit=4
     I:rabbit_foot=3
     I:rabbit_hide=8
