Add Mystical Agradditions
Updated mods:
  BiblioCraft 2.2.2
  FTB Lib 1.1x-3.6.5
  FTB Utilities 1.1x-3.6.5
  Mystical Agriculture 1.5.4
  Natura 1.10.2-4.1.0.63

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -105,6 +105,7 @@ general {
             B:mercurius_updater=false
             B:morebees=false
             B:movingworld=false
+            B:mysticalagradditions=false
             B:mysticalagriculture=false
             B:natura=false
             B:nethermetals=false
