--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -17,6 +17,7 @@
 
 
 "base metals" {
+    I:adamantine=2
     I:aquarium=4
     I:cold_iron=4
     I:star_steel=3
@@ -172,6 +173,7 @@ mekanism {
     I:aluminum=8
     I:brass=4
     I:bronze=4
+    I:chrome=2
     I:constantan=4
     I:copper=6
     I:electrum=4
@@ -185,6 +187,8 @@ mekanism {
     I:silver=4
     I:steel=3
     I:tin=4
+    I:titanium=2
+    I:tungsten=2
     I:zinc=4
 }
 
