--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -75,6 +75,7 @@ gear {
 ##########################################################################################################
 
 "mod support seed tiers" {
+    I:adamantine_tier=5
     I:aluminum_brass_tier=2
     I:aluminum_tier=2
     I:amber_tier=4
@@ -90,6 +91,7 @@ gear {
     I:bronze_tier=3
     I:certus_quartz_tier=3
     I:chimerite_tier=3
+    I:chrome_tier=5
     I:cobalt_tier=4
     I:cold_iron_tier=3
     I:conductive_iron_tier=3
@@ -137,7 +139,9 @@ gear {
     I:tanzanite_tier=4
     I:terrasteel_tier=5
     I:tin_tier=3
+    I:titanium_tier=5
     I:topaz_tier=4
+    I:tungsten_tier=5
     I:vibrant_alloy_tier=5
     I:vinteum_tier=3
     I:yellorium_tier=5
@@ -152,6 +156,7 @@ gear {
 ##########################################################################################################
 
 "mod support seeds" {
+    B:adamantine_seeds=true
     B:aluminum_brass_seeds=true
     B:aluminum_seeds=true
     B:amber_seeds=true
@@ -167,6 +172,7 @@ gear {
     B:bronze_seeds=true
     B:certus_quartz_seeds=true
     B:chimerite_seeds=true
+    B:chrome_seeds=true
     B:cobalt_seeds=true
     B:cold_iron_seeds=true
     B:conductive_iron_seeds=true
@@ -214,7 +220,9 @@ gear {
     B:tanzanite_seeds=true
     B:terrasteel_seeds=true
     B:tin_seeds=true
+    B:titanium_seeds=true
     B:topaz_seeds=true
+    B:tungsten_seeds=true
     B:vibrant_alloy_seeds=true
     B:vinteum_seeds=true
     B:yellorium_seeds=true
