Set Modpack and version in Mercurius

--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -1,8 +1,8 @@
 # Configuration file
 
 general {
-    S:modPack=Vanilla
-    S:modPackVersion=1.0
+    S:modPack=NST Frostburn Unofficial
+    S:modPackVersion=1.0.19
     B:spammyLogs=false
 
     optout {
