--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -18,7 +18,9 @@ blocks {
     B:dislocator_receptacle=true
     B:diss_enchanter=true
     B:draconic_block=true
+    B:draconic_spawner=true
     B:draconium_block=true
+    B:draconium_chest=true
     B:draconium_ore=true
     B:energy_crystal=true
     B:energy_infuser=true
@@ -122,6 +124,7 @@ items {
     B:ender_energy_manipulator=true
     B:info_tablet=true
     B:magnet=true
+    B:mob_soul=true
     B:nugget=true
     B:reactor_part=true
     B:tool_upgrade=true
@@ -241,6 +244,9 @@ tweaks {
         appliedenergistics2:item.ItemCrystalSeed
      >
 
+    # Passive (Animals) Mobs have a 1 in this number chance to drop a soul
+    I:passiveSoulDropChance=800
+
     # If set to true items dropped by tools in AOE mode will despawn after 5 seconds if not picked up.
     B:rapidDespawnAOEMinedItems=false
 
@@ -252,6 +258,29 @@ tweaks {
 
     # Adjusts the energy output multiplier of the reactor
     D:reactorOutputMultiplier=1.0
+
+    # Mobs have a 1 in this number chance to drop a soul
+    I:soulDropChance=1000
+
+    # Sets the min and max spawn delay in ticks for each spawner tier. Order is as follows.
+    # Basic MIN, MAX, Wyvern MIN, MAX, Draconic MIN, MAX, Chaotic MIN MAX
+    I:spawnerDelays <
+        200
+        800
+        100
+        400
+        50
+        200
+        25
+        100
+     >
+
+    # By default any entities added to this list will not drop their souls and will not be spawnable by the stabilized spawner.
+    S:spawnerList <
+     >
+
+    # Changes the spawner list to a whitelist as opposed to the default blacklist.
+    B:spawnerListWhiteList=false
 }
 
 
