--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -98,6 +98,7 @@ gear {
     I:constantan_tier=4
     I:copper_tier=2
     I:dark_steel_tier=4
+    I:desh_tier=5
     I:draconium_tier=5
     I:electrical_steel_tier=3
     I:electrum_tier=4
@@ -116,6 +117,7 @@ gear {
     I:manasteel_tier=3
     I:manyullyn_tier=5
     I:marble_tier=2
+    I:meteoric_iron_tier=4
     I:mithril_tier=4
     I:moonstone_tier=5
     I:mystical_flower_tier=2
@@ -129,8 +131,11 @@ gear {
     I:refined_obsidian_tier=5
     I:rubber_tier=2
     I:ruby_tier=4
+    I:saltpeter_tier=3
     I:sapphire=4
     I:signalum_tier=4
+    I:silicon_seeds=2
+    I:silicon_tier=2
     I:silver_tier=3
     I:soularium_tier=4
     I:star_steel_tier=4
@@ -179,6 +184,7 @@ gear {
     B:constantan_seeds=true
     B:copper_seeds=true
     B:dark_steel_seeds=true
+    B:desh_seeds=true
     B:draconium_seeds=true
     B:electrical_steel_seeds=true
     B:electrum_seeds=true
@@ -197,6 +203,7 @@ gear {
     B:manasteel_seeds=true
     B:manyullyn_seeds=true
     B:marble_seeds=true
+    B:meteoric_iron_seeds=true
     B:mithril_seeds=true
     B:moonstone_seeds=true
     B:mystical_flower_seeds=true
@@ -210,12 +217,15 @@ gear {
     B:refined_obsidian_seeds=true
     B:rubber_seeds=true
     B:ruby_seeds=true
+    B:saltpeter_seeds=true
     B:sapphire_seeds=true
     B:signalum_seeds=true
+    B:silicon_seeds=true
     B:silver_seeds=true
     B:soularium_seeds=true
     B:star_steel_seeds=true
     B:steel_seeds=true
+    B:sulfur_seeds=true
     B:sunstone_seeds=true
     B:tanzanite_seeds=true
     B:terrasteel_seeds=true
