--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -58,6 +58,9 @@ tools {
     # Enable Katana [default: true]
     B:"Enable Katana"=true
 
+    # Enable Laser Gun [default: true]
+    B:"Enable Laser Gun"=true
+
     # Multiply combo value by this to calculate bonus damage [range: 0.0 ~ 3.4028235E38, default: 1.25]
     S:"Katana combo multiplier"=1.25
 }
