--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -120,6 +120,12 @@ forestry {
 }
 
 
+galacticraft {
+    I:desh=2
+    I:meteoric_iron=3
+}
+
+
 gems {
     I:amber=6
     I:malachite=6
@@ -184,8 +190,11 @@ mekanism {
     I:nickel=4
     I:platinum=2
     I:rubber=8
+    I:saltpeter=5
+    I:silicon=8
     I:silver=4
     I:steel=3
+    I:sulfur=8
     I:tin=4
     I:titanium=2
     I:tungsten=2
