Add Connected Textures Mod (for updated Chisel)
Updated mods:
  Apple Core MC1.10.2-2.2.0
  Chisel MC1.10.2-0.0.11.25
  Craft Tweaker 1.10.2-3.0.26
  Draconic Evolution 1.10.2-2.1.1.236
  Extreme Reactors 1.10.2-0.4.5.30
  Immersive Engineering 0.10-61
  Journeymap 1.10.2-5.4.7
  Mystical Agriculture 1.10.2-1.5.6
  PlusTiC 5.0.1.4
  TOP Addons 1.10.2-0.15.0
  UniDict 1.10.2-2.9b
  Vein Miner 1.9-0.36.0.609+0056a96

Regenerate Project E EMC.

--- a/config/ProjectE/mapping.cfg
+++ b/config/ProjectE/mapping.cfg
@@ -443,6 +443,9 @@ mapperconfigurations {
             # Enable ICarvingGroup with name=temple [default: true]
             B:temple=true
 
+            # Enable ICarvingGroup with name=testblock [default: true]
+            B:testblock=true
+
             # Enable ICarvingGroup with name=treated_wood [default: true]
             B:treated_wood=true
 
