--- a/config/mysticalagriculture_recipes.cfg
+++ b/config/mysticalagriculture_recipes.cfg
@@ -137,6 +137,12 @@ gems {
 }
 
 
+ic2 {
+    I:iridium_ore=1
+    I:uranium_238=4
+}
+
+
 mekanism {
     I:glowstone_ingot=3
     I:osmium=4
@@ -198,7 +204,13 @@ mekanism {
     I:tin=4
     I:titanium=2
     I:tungsten=2
+    I:uranium=2
     I:zinc=4
+}
+
+
+qyark {
+    I:biotite=8
 }
 
 
