--- a/config/Extreme Reactors/Extreme Reactors.cfg
+++ b/config/Extreme Reactors/Extreme Reactors.cfg
@@ -10,6 +10,12 @@ client {
     # If true, disables the rendering of fuel inside the fuel rods of a Reactor and the associated animation. Restart needed (Default: false)
     B:disableReactorFuelRodRender=false
 
+    # If true, disables the fuel rods particle effect. (Default: false)
+    B:disableReactorParticles=false
+
+    # If true, disables the Turbine particle effect. (Default: false)
+    B:disableTurbineParticles=false
+
     # If true, disables the rendering of the rotor animation of an active Turbine. Restart needed (Default: false)
     B:disableTurbineRotorRender=false
 }
