--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -46,12 +46,6 @@ chisel {
 
 
 client {
-    # Choose whether the inside corner is disconnected on a CTM block - http://imgur.com/eUywLZ4
-    B:connectInsideCTM=false
-
-    # Enable connected textures
-    B:connectedTextures=true
-
     # For those people who just hate block descriptions on the world gen!
     B:imTooGoodForBlockDescriptions=false
 
@@ -128,6 +122,7 @@ features {
     B:stonebrick=true
     B:technical=true
     B:temple=true
+    B:testBlock=true
     B:tin=true
     B:tyrian=true
     B:uranium=true
