--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -103,6 +103,7 @@ gear {
     I:electrical_steel_tier=3
     I:electrum_tier=4
     I:ender_amethyst_tier=5
+    I:ender_biotite_tier=3
     I:enderium_tier=5
     I:energetic_alloy_tier=4
     I:fluix_tier=4
@@ -147,6 +148,7 @@ gear {
     I:titanium_tier=5
     I:topaz_tier=4
     I:tungsten_tier=5
+    I:uranium_tier=5
     I:vibrant_alloy_tier=5
     I:vinteum_tier=3
     I:yellorium_tier=5
@@ -189,6 +191,7 @@ gear {
     B:electrical_steel_seeds=true
     B:electrum_seeds=true
     B:ender_amethyst_seeds=true
+    B:ender_biotite_seeds=true
     B:enderium_seeds=true
     B:energetic_alloy_seeds=true
     B:fluix_seeds=true
@@ -233,6 +236,7 @@ gear {
     B:titanium_seeds=true
     B:topaz_seeds=true
     B:tungsten_seeds=true
+    B:uranium_seeds=true
     B:vibrant_alloy_seeds=true
     B:vinteum_seeds=true
     B:yellorium_seeds=true
