--- a/config/topaddons.cfg
+++ b/config/topaddons.cfg
@@ -1,49 +1,33 @@
 # Configuration file
 
-agricraft {
-    # Require a Probe to see growth stages [default: true]
-    B:extendedMode=true
-}
+~CONFIG_VERSION: 1
 
-
-"blood magic" {
-    # Is holding a divination sigil required to see certain information. [default: true]
+bloodmagic {
+    # Is holding a divination sigil required to see certain information.
     B:requireSigil=true
 
-    # Shows the player that they're looking at a mimick block when holding a seer sigil. [default: true]
+    # Shows the player that they're looking at a mimick block when holding a seer sigil.
     B:seeMimickWithSigil=true
-}
-
-
-forge {
-    # Show tank gauge for internal tanks on most Tile Entities. [default: true]
-    B:showTankGauge=true
 }
 
 
 helmets {
     # All non-blacklisted helmets can be combined with a probe.
-    # !!! When this is false you can't uncraft previously probified helmets !!! [default: true]
+    # !!! When this is false you can't uncraft previously probified helmets !!!
     B:allHelmetsProbable=true
 
-    # Put registry names of helmets that shouldn't be combinable with a probe [default: ]
+    # Registry names of helmets that shouldn't be combinable with a probe
     S:helmetBlacklist <
      >
 }
 
 
-"moo fluids" {
-    # Show the Fluid of Fluid Cows [default: true]
-    B:showFluid=true
-}
-
-
 vanilla {
-    # Show breeding cooldown on animals while sneaking. [default: true]
-    B:breedingCooldown=true
+    # Show animal grow up timer.
+    B:growupTimer=true
 
-    # Show note block pitch and instrument. [default: true]
-    B:noteBlockPitch=true
+    # Show animal breeding cooldown.
+    B:showBreedingCooldown=true
 }
 
 
