--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -714,6 +714,12 @@ shedding {
     I:plustic.BlindBandit.metadata=0
     I:plustic.BlindBandit.rate=-1
 
+    # Configuration of Shedding for plustic.SupremeLeader
+    S:plustic.SupremeLeader.item=
+    I:plustic.SupremeLeader.lexiconDisplaySize=40
+    I:plustic.SupremeLeader.metadata=0
+    I:plustic.SupremeLeader.rate=-1
+
     # Configuration of Shedding for randomthings.spirit
     S:randomthings.spirit.item=
     I:randomthings.spirit.lexiconDisplaySize=40
