--- a/config/Mercurius.cfg
+++ b/config/Mercurius.cfg
@@ -79,6 +79,7 @@ general {
             B:endercore=false
             B:fastleafdecay=false
             B:foamfix=false
+            B:foamfixcore=false
             B:fodc=false
             B:forestry=false
             B:ftbl=false
