--- a/config/mysticalagriculture.cfg
+++ b/config/mysticalagriculture.cfg
@@ -80,10 +80,12 @@ gear {
     I:aluminum_tier=2
     I:amber_tier=4
     I:apatite_tier=2
+    I:aquamarine_tier=3
     I:aquarium_tier=3
     I:ardite_tier=3
     I:basalt_tier=2
     I:basalz_tier=3
+    I:black_quartz_tier=3
     I:blitz_tier=3
     I:blizz_tier=3
     I:blue_topaz_tier=3
@@ -109,6 +111,7 @@ gear {
     I:fluix_tier=4
     I:glowstone_ingot_tier=4
     I:invar_tier=4
+    I:iridium_ore_tier=5
     I:iridium_tier=5
     I:knightslime_tier=3
     I:lead_tier=3
@@ -130,6 +133,7 @@ gear {
     I:quartz_enriched_iron_tier=3
     I:redstone_alloy_tier=3
     I:refined_obsidian_tier=5
+    I:rock_crystal_tier=5
     I:rubber_tier=2
     I:ruby_tier=4
     I:saltpeter_tier=3
@@ -140,6 +144,7 @@ gear {
     I:silver_tier=3
     I:soularium_tier=4
     I:star_steel_tier=4
+    I:starmetal_tier=4
     I:steels_tier=4
     I:sunstone_tier=5
     I:tanzanite_tier=4
@@ -148,6 +153,7 @@ gear {
     I:titanium_tier=5
     I:topaz_tier=4
     I:tungsten_tier=5
+    I:uranium_238_tier=5
     I:uranium_tier=5
     I:vibrant_alloy_tier=5
     I:vinteum_tier=3
@@ -168,10 +174,12 @@ gear {
     B:aluminum_seeds=true
     B:amber_seeds=true
     B:apatite_seeds=true
+    B:aquamarine_seeds=true
     B:aquarium_seeds=true
     B:ardite_seeds=true
     B:basalt_seeds=true
     B:basalz_seeds=true
+    B:black_quartz_seeds=true
     B:blitz_seeds=true
     B:blizz_seeds=true
     B:blue_topaz_seeds=true
@@ -197,6 +205,7 @@ gear {
     B:fluix_seeds=true
     B:glowstone_ingot_seeds=true
     B:invar_seeds=true
+    B:iridium_ore_seeds=true
     B:iridium_seeds=true
     B:knightslime_seeds=true
     B:lead_seeds=true
@@ -218,6 +227,7 @@ gear {
     B:quartz_enriched_iron_seeds=true
     B:redstone_alloy_seeds=true
     B:refined_obsidian_seeds=true
+    B:rock_crystal_seeds=true
     B:rubber_seeds=true
     B:ruby_seeds=true
     B:saltpeter_seeds=true
@@ -227,6 +237,7 @@ gear {
     B:silver_seeds=true
     B:soularium_seeds=true
     B:star_steel_seeds=true
+    B:starmetal_seeds=true
     B:steel_seeds=true
     B:sulfur_seeds=true
     B:sunstone_seeds=true
@@ -236,6 +247,7 @@ gear {
     B:titanium_seeds=true
     B:topaz_seeds=true
     B:tungsten_seeds=true
+    B:uranium_238_seeds=true
     B:uranium_seeds=true
     B:vibrant_alloy_seeds=true
     B:vinteum_seeds=true
