Disable Draconic Evolution mod repost PSA

--- a/config/brandon3055/DraconicEvolution.cfg
+++ b/config/brandon3055/DraconicEvolution.cfg
@@ -159,7 +159,7 @@ misc {
     B:devLog=false
 
     # Set to false to disable the #StopModReposts public service announcement
-    B:modRepostPSA=true
+    B:modRepostPSA=false
 }
 
 
