Enable Thaumcraft world regeneration for existing worlds

--- a/config/thaumcraft.cfg
+++ b/config/thaumcraft.cfg
@@ -176,16 +176,16 @@ world_generation {
 ##########################################################################################################
 
 world_regeneration {
-    B:Quartz_ore=false
-    B:amber_ore=false
-    B:aura_nodes=false
-    B:cinnibar_ore=false
+    B:Quartz_ore=true
+    B:amber_ore=true
+    B:aura_nodes=true
+    B:cinnibar_ore=true
 
     # This key is used to keep track of which chunk have been generated/regenerated. Changing it will cause the regeneration code to run again, so only change it if you want it to happen. Useful to regen only one world feature at a time.
-    S:regen_key=DEFAULT
-    B:structures=false
-    B:trees=false
-    B:vis_crystals=false
+    S:regen_key=Frostburn1.0.19
+    B:structures=true
+    B:trees=true
+    B:vis_crystals=true
 }
 
 
